# GIGI

./: .gitignore  CMakeLists.txt  FBGA_Usage_Guide.md  README.md  build.sh  third_party.sh
data/circuit/: road_Mugello_3D.txt
data/paper/: ard_2d_fwbw_moto_Catalunya.txt
python_bindings/: CMakeLists.txt  Makefile  README.md  pybind_gigi.cpp  requirements.txt  setup.py  test_example.py  test_fwbw_lambdas.py
src/: FB_F1_10.cc  FWBW.cc  GIGI.hh  brentdekker.cc  gg_utils.cc
src/GIGI/: FB_F1_10.hxx  FWBW.hxx  brentdekker.hxx  gg_utils.hxx  segment.hxx  types.hxx
src_tests/: GIGI_test_F1_10.cc  GIGI_test_basic.cc  GIGI_test_circuit.cc  GIGI_test_moto.cc  GIGI_test_splines.cc
